--- a/dashboard/index.html
+++ b/dashboard/index.html
@@ -1342,7 +1342,7 @@ $avatar_passage
   &lt;&lt;set $avatar_passage to &quot;avatar_act1_03/What should Buro do? Should he manouver around the crowd? Or should he wait for the tram to leave?&quot;&gt;&gt;
 &lt;&lt;/if&gt;&gt;
 
-&lt;&lt;if $avatar_narrating == &quot;avatar_act1_03false&quot; or $avatar_narrating == &quot;avatar_act1_04Bfalse&quot;&gt;&gt;
+&lt;&lt;if $avatar_narrating == &quot;avatar_act1_03false&quot;&gt;&gt;
   &lt;&lt;if $avatar_movement == &quot;Jumping&quot;&gt;&gt;
       &lt;&lt;set $avatar_passage to &quot;avatar_act1_04A/Buro tries to skip his way through the crowd, but the crowd makes it difficult. &#39;Excuse me, pardon me,&#39; he says politely, attempting to get a clearer view.&quot;&gt;&gt;
       &lt;&lt;set $avatar_nextAct to true&gt;&gt;
@@ -1355,7 +1355,7 @@ $avatar_passage
 	&lt;&lt;/if&gt;&gt;
 &lt;&lt;/if&gt;&gt;
 
-&lt;&lt;if $avatar_narrating == &quot;avatar_act1_03false&quot; and ($avatar_movement == &quot;Looking&quot; || $avatar_movement == &quot;Jumping&quot;) &gt;&gt;
+&lt;&lt;if $avatar_narrating == &quot;avatar_act1_03false&quot; and ($avatar_movement !== &quot;Looking&quot; || $avatar_movement !== &quot;Jumping&quot;) &gt;&gt;
 	&lt;&lt;if _prevAvatarMovement !== $avatar_movement &amp;&amp; $avatar_movement !== $key_movement&gt;&gt;
 		&lt;&lt;script&gt;&gt;
 			makeShortComments(&#39;avatar&#39;, &#39;notmoving&#39;);
