--- a/dashboard/index.html
+++ b/dashboard/index.html
@@ -1355,25 +1355,27 @@ $avatar_passage
 	&lt;&lt;/if&gt;&gt;
 &lt;&lt;/if&gt;&gt;
 
-&lt;&lt;if $avatar_narrating == &quot;avatar_act1_03false&quot; and ($avatar_movement !== &quot;Looking&quot; || $avatar_movement !== &quot;Jumping&quot;) &gt;&gt;
-	&lt;&lt;if _prevAvatarMovement !== $avatar_movement &amp;&amp; $avatar_movement !== $key_movement&gt;&gt;
-		&lt;&lt;script&gt;&gt;
-			makeShortComments(&#39;avatar&#39;, &#39;notmoving&#39;);
-			console.log(variables().avatar_comment);
-		&lt;&lt;/script&gt;&gt;
-		&lt;&lt;set _prevAvatarMovement to variables().avatar_movement&gt;&gt;
-	&lt;&lt;/if&gt;&gt;
-	&lt;&lt;if $avatar_comment !== _prevAvatarComment&gt;&gt;
-		&lt;&lt;set _prevAvatarComment to $avatar_comment&gt;&gt;
-		&lt;&lt;set $avatar_passage to $avatar_comment&gt;&gt;
-		&lt;&lt;script&gt;&gt;
-			var passage_temp = variables().avatar_passage;
-			const renderedText = $((document).createDocumentFragment()).wiki(passage_temp).text();
-            console.log(renderedText);
-            variables().avatar_passage = renderedText;
-		&lt;&lt;/script&gt;&gt;
-         &lt;&lt;set $avatar_passage to variables().avatar_passage&gt;&gt;
-	&lt;&lt;/if&gt;&gt;
+&lt;&lt;if $avatar_narrating == &quot;avatar_act1_03false&quot;&gt;&gt;
+  &lt;&lt;if $avatar_movement !== &quot;Looking&quot; || $avatar_movement !== &quot;Jumping&quot;&gt;&gt;
+      &lt;&lt;if _prevAvatarMovement !== $avatar_movement&gt;&gt;
+          &lt;&lt;script&gt;&gt;
+              makeShortComments(&#39;avatar&#39;, &#39;notmoving&#39;);
+              console.log(variables().avatar_comment);
+          &lt;&lt;/script&gt;&gt;
+          &lt;&lt;set _prevAvatarMovement to variables().avatar_movement&gt;&gt;
+      &lt;&lt;/if&gt;&gt;
+      &lt;&lt;if $avatar_comment !== _prevAvatarComment&gt;&gt;
+          &lt;&lt;set _prevAvatarComment to $avatar_comment&gt;&gt;
+          &lt;&lt;set $avatar_passage_tmp to $avatar_comment&gt;&gt;
+          &lt;&lt;script&gt;&gt;
+              var passage_temp = variables().avatar_passage_tmp;
+              const renderedText = $((document).createDocumentFragment()).wiki(passage_temp).text();
+              console.log(renderedText);
+              variables().avatar_passage = renderedText;
+          &lt;&lt;/script&gt;&gt;
+           &lt;&lt;set $avatar_passage to variables().avatar_passage&gt;&gt;
+      &lt;&lt;/if&gt;&gt;
+  &lt;&lt;/if&gt;&gt;
 &lt;&lt;/if&gt;&gt;
 
 &lt;&lt;if $avatar_nextAct is true and (avatar_narrating == &quot;avatar_act1_04Afalse&quot; or avatar_narrating == &quot;avatar_act1_04Bfalse&quot;)&gt;&gt;
