--- a/dashboard/index.html
+++ b/dashboard/index.html
@@ -1356,7 +1356,7 @@ $avatar_passage
 &lt;&lt;/if&gt;&gt;
 
 &lt;&lt;if $avatar_narrating == &quot;avatar_act1_03false&quot;&gt;&gt;
-  &lt;&lt;if $avatar_movement !== &quot;Looking&quot; || $avatar_movement !== &quot;Jumping&quot;&gt;&gt;
+  &lt;&lt;if $avatar_movement !== &quot;Looking&quot; and $avatar_movement !== &quot;Jumping&quot;&gt;&gt;
       &lt;&lt;if _prevAvatarMovement !== $avatar_movement&gt;&gt;
           &lt;&lt;script&gt;&gt;
               makeShortComments(&#39;avatar&#39;, &#39;notmoving&#39;);
