--- a/dashboard/index.html
+++ b/dashboard/index.html
@@ -1358,6 +1358,7 @@ $avatar_passage
 &lt;&lt;if $avatar_narrating == &quot;avatar_act1_03false&quot;&gt;&gt;
 	&lt;&lt;if $avatar_movement == &quot;Looking&quot;&gt;&gt;
   		&lt;&lt;set $avatar_passage to &quot;avatar_act1_04B/Buro decides to wait patiently, hoping for a clearer view. &#39;I&#39;ll wait here for Hachi,&#39; he murmurs, scanning the area. &#39;Once this crowd clears, I&#39;ll have a better chance of spotting him,&#39; he adds with determination.&quot;&gt;&gt;
+        &lt;&lt;set $avatar_nextAct to true&gt;&gt;
 	&lt;&lt;/if&gt;&gt;
 &lt;&lt;/if&gt;&gt;
 
