--- a/index.html
+++ b/index.html
@@ -1076,7 +1076,7 @@
 			setInterval(() => {
 				writeToDatabase();
 			}, 1000);
-			readFromDatabase(); // Read data after writing
+			readFromDatabase(deviceName); // Read data after writing
 		</script>
 	</body>
 </html>
