--- a/index.html
+++ b/index.html
@@ -86,6 +86,7 @@
 						movePatterns = 'hachi_patterns.json';
 						sentenceSource = 'hachi_sentences.json';
 						tagSource = 'tags.json';
+						readFromDatabase(deviceName);
 						initializeSounds();
 					} else {
 						deviceName = "avatar_BT";
@@ -95,6 +96,7 @@
 						movePatterns = 'avatar_patterns.json';
 						sentenceSource = 'avatar_sentences.json';
 						tagSource = 'tags.json';
+						readFromDatabase(deviceName);
 						initializeSounds();
 					}
 				}
