--- a/index.html
+++ b/index.html
@@ -76,6 +76,10 @@
 					}
 				}
 
+				// Define variables to hold the listener handles
+				let hachiListenerHandle;
+				let avatarListenerHandle;
+
 				function toggleDeviceName() {
 					var checkbox = document.getElementById("hachiCheckbox");
 					if (checkbox.checked) {
@@ -87,6 +91,9 @@
 						sentenceSource = 'hachi_sentences.json';
 						tagSource = 'tags.json';
 						initializeSounds();
+						if (avatarListenerHandle) {
+							off(ref(database, 'avatar_data'), 'value', avatarListenerHandle);
+						}
 					} else {
 						deviceName = "avatar_BT";
 						console.log("Setting to "+deviceName);
@@ -96,6 +103,10 @@
 						sentenceSource = 'avatar_sentences.json';
 						tagSource = 'tags.json';
 						initializeSounds();
+						// Disconnect from the Hachi_BT database if it's connected
+						if (hachiListenerHandle) {
+							off(ref(database, 'hachi_data'), 'value', hachiListenerHandle);
+						}
 					}
 				}
 
