--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 	<body>
 		<!-- Checkbox for Hachi -->
 		<div id="hachiCheckboxContainer">
-			<input type="checkbox" id="hachiCheckbox" onclick="toggleDeviceName()" />
+			<input type="checkbox" id="hachiCheckbox" onclick="toggleDeviceName(),toggleDeviceName2()" />
 		</div>
 		<!-- Console output-->
 		<div id="consoleOutput"></div>
@@ -91,7 +91,6 @@
 						sentenceSource = 'hachi_sentences.json';
 						tagSource = 'tags.json';
 						initializeSounds();
-						database.ref('avatar_data').off();
 					} else {
 						deviceName = "avatar_BT";
 						console.log("Setting to "+deviceName);
@@ -101,7 +100,6 @@
 						sentenceSource = 'avatar_sentences.json';
 						tagSource = 'tags.json';
 						initializeSounds();
-						database.ref('hachi_data').off();
 					}
 				}
 
@@ -1085,6 +1083,15 @@
 				writeToDatabase();
 				readFromDatabase(deviceName); // Read data after writing
 			}, 1000);
+
+			function toggleDeviceName2() {
+					var checkbox = document.getElementById("hachiCheckbox");
+					if (checkbox.checked) {
+						database.ref('avatar_data').off();
+					} else {
+						database.ref('hachi_data').off();
+					}
+				}
 		</script>
 	</body>
 </html>
