--- a/index.html
+++ b/index.html
@@ -931,7 +931,7 @@
 
 		<script type="module">
 			import { initializeApp } from 'https://www.gstatic.com/firebasejs/10.9.0/firebase-app.js'
-			import  { getDatabase, ref, set, onValue, update } from 'https://www.gstatic.com/firebasejs/10.9.0/firebase-database.js'
+			import  { getDatabase, ref, set, onValue, off, update } from 'https://www.gstatic.com/firebasejs/10.9.0/firebase-database.js'
 
 			// Your Firebase configuration
 			const firebaseConfig = {
