--- a/index.html
+++ b/index.html
@@ -1077,7 +1077,7 @@
 			});
 			}
 			setInterval(() => {
-				toggleDeviceName2()
+				toggleDeviceName2();
 				console.log(deviceName);
 				writeToDatabase();
 				readFromDatabase(deviceName); // Read data after writing
