--- a/index.html
+++ b/index.html
@@ -1088,7 +1088,7 @@
 				var checkbox = document.getElementById("hachiCheckbox");
 				if (checkbox.checked) {
 					const avatarDataRef = ref(database, 'avatar_data');
-					const unsubscribe = onValue(hachiDataRef, (snapshot) => {
+					const unsubscribe = onValue(avatarDataRef, (snapshot) => {
 						console.log(snapshot.val());
 					});
 					off(avatarDataRef, unsubscribe);
