--- a/index.html
+++ b/index.html
@@ -1093,7 +1093,7 @@
 					});
 					off(avatarDataRef, unsubscribe);
 				} else {
-					database.ref('hachi_data').off();
+					//database.ref('hachi_data').off();
 				}
 			}
 		</script>
