--- a/index.html
+++ b/index.html
@@ -1087,7 +1087,7 @@
 			function toggleDeviceName2() {
 				var checkbox = document.getElementById("hachiCheckbox");
 				if (checkbox.checked) {
-					off(database, 'hachi_data');
+					off(database, 'avatar_data');
 				} else {
 					//database.ref('hachi_data').off();
 				}
