--- a/index.html
+++ b/index.html
@@ -1080,7 +1080,8 @@
 			function toggleDeviceName2() {
 				var checkbox = document.getElementById("hachiCheckbox");
 				if (checkbox.checked) {
-					off(database, 'avatar_data');
+					database.ref('avatar_data').off();
+					//off(database, 'avatar_data');
 				} else {
 					//database.ref('hachi_data').off();
 				}
