--- a/index.html
+++ b/index.html
@@ -1089,7 +1089,7 @@
 			}
 
 			setInterval(() => {
-				toggleDeviceName2();
+				//toggleDeviceName2();
 				console.log(deviceName);
 				writeToDatabase();
 			}, 1000);
