--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 	<body>
 		<!-- Checkbox for Hachi -->
 		<div id="hachiCheckboxContainer">
-			<input type="checkbox" id="hachiCheckbox" onclick="toggleDeviceName(), toggleDeviceName2()" />
+			<input type="checkbox" id="hachiCheckbox" onclick="toggleDeviceName()" />
 		</div>
 		<!-- Console output-->
 		<div id="consoleOutput"></div>
@@ -87,6 +87,7 @@
 						sentenceSource = 'hachi_sentences.json';
 						tagSource = 'tags.json';
 						initializeSounds();
+						toggleDeviceName2();
 					} else {
 						deviceName = "avatar_BT";
 						console.log("Setting to "+deviceName);
@@ -96,6 +97,7 @@
 						sentenceSource = 'avatar_sentences.json';
 						tagSource = 'tags.json';
 						initializeSounds();
+						toggleDeviceName2();
 					}
 				}
 
@@ -1085,7 +1087,7 @@
 				} else {
 					off(ref(database, databaseName));
 					readFromDatabase(deviceName); // Read data after writing
-			}
+				}
 			}
 
 			setInterval(() => {
