--- a/index.html
+++ b/index.html
@@ -1095,7 +1095,7 @@
 				console.log(deviceName);
 				writeToDatabase();
 			}, 1000);
-			readFromDatabase(deviceName); // Read data after writing
+			readFromDatabase(deviceName); // Read data after writing,
 		</script>
 	</body>
 </html>
