--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 	<body>
 		<!-- Checkbox for Hachi -->
 		<div id="hachiCheckboxContainer">
-			<input type="checkbox" id="hachiCheckbox" onclick="toggleDeviceName(); toggleDeviceName2()" />
+			<input type="checkbox" id="hachiCheckbox" onclick="toggleDeviceName(); toggleDeviceName2;" />
 		</div>
 		<!-- Console output-->
 		<div id="consoleOutput"></div>
